careerhub/base/msa/posting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posting-service
  template:
    metadata:
      labels:
        app: posting-service
    spec:
      serviceAccountName: posting-service
      restartPolicy: Always
      containers:
        - name: posting-service
