careerhub/base/msa/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      serviceAccountName: review-service
      restartPolicy: Always
      containers:
        - name: review-service
