careerhub/base/msa/api-composer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-composer
  labels:
    app: api-composer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-composer
  template:
    metadata:
      labels:
        app: api-composer
    spec:
      restartPolicy: Always
      containers:
        - name: api-composer
---
apiVersion: v1
kind: Service
metadata:
  name: api-composer
  labels:
    app: api-composer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: api-composer
