careerhub/base/msa/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  type: ClusterIP
  ports:
    - name: mailer-grpc
      port: 50051
      targetPort: 50051
    - name: restapi
      port: 8080
      targetPort: 8080
  selector:
    app: auth-service
