careerhub/base/msa/userinfo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userinfo-service
  labels:
    app: userinfo-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userinfo-service
  template:
    metadata:
      labels:
        app: userinfo-service
    spec:
      serviceAccountName: userinfo-service
      restartPolicy: Always
      containers:
        - name: userinfo-service
---
apiVersion: v1
kind: Service
metadata:
  name: userinfo-service
  labels:
    app: userinfo-service
spec:
  type: ClusterIP
  ports:
    - name: restapi-grpc
      port: 50051
      targetPort: 50051
    - name: suggester-grpc
      port: 50052
      targetPort: 50052
  selector:
    app: userinfo-service
